--- a/ex2/desafio.html
+++ b/ex2/desafio.html
@@ -76,9 +76,7 @@
                 <th>Frequencia</th>
               
               </thead>
-              <tbody id="tbody">
-               
-              </tbody>
+              <tbody id="tbody"></tbody>
             </table>
           </div>
 
@@ -94,7 +92,8 @@
 
   </main>
   <footer>
-
+    <a href = "https://www.linkedin.com/in/vivian-de-lima-sanches-4a4955122/">Linkedin</a>
+    <a href = "https://github.com/Viviansol">Github</a>
   </footer>
 
 </body>
