--- a/ex2/sobre.html
+++ b/ex2/sobre.html
@@ -36,7 +36,7 @@
                    
                   <p clas="paragrafo">Olá, meu nome é Vivian Sanches! Estou participando do processo seletivo para a Aceleradora Ágil. 
                       Este é o terceiro desafio, e para sua solução , decidi fazer um site onde cada página contém as especificações do html e css. 
-                      Na página de contato fiz o formulário e no link desafio a solução do desafio final. 
+                      Na página de contato fiz o formulário de contato e no link desafio a solução do desafio final. 
                       Para saber um pouco mais sobre mim, no rodapé tem links de linkedin e github! 
 
                   </p>
@@ -45,7 +45,8 @@
         </div>
     </main>
     <footer>
-       
-    </footer>
+        <a href = "https://www.linkedin.com/in/vivian-de-lima-sanches-4a4955122/">Linkedin</a>
+        <a href = "https://github.com/Viviansol">Github</a>
+      </footer>
 </body>
 </html>
