--- a/ex2/index.html
+++ b/ex2/index.html
@@ -67,7 +67,8 @@
         </div>
     </main>
     <footer>
-       
-    </footer>
+        <a href = "https://www.linkedin.com/in/vivian-de-lima-sanches-4a4955122/">Linkedin</a>
+        <a href = "https://github.com/Viviansol">Github</a>
+      </footer>
 </body>
 </html>
